# eff-experiments

./: .ghci  .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  LICENSE  README.md  eff-experiments.cabal  stack.yaml
bench/: Benchmarks.hs  Indexed.hs  Iota.hs  Tagged.hs  Unified.hs
bench/Strict/: Iota.hs
dep/cxmonad/: LICENSE  cxmonad.cabal  stack.yaml
dep/cxmonad/src/Control/Monad/: Cx.hs
dep/cxmonad/src/Control/Monad/Cx/: Rebound.hs
dep/cxmonad/src/Data/Functor/: Cx.hs
dep/cxmonad/src/Data/Functor/Cx/: Rebound.hs
dep/eff/: LICENSE  eff.cabal
dep/eff/app/: Main.hs
dep/eff/src/: Lib.hs
examples/: eff.hs  regular.hs
src/: Util.hs
src-exe/: Main.hs
src/Control/Eff/Internal/: Eff.hs  EffectBuilder.hs  FTCQueue.hs  Playground.hs  Types.hs
src/Control/Monad/: Graph.hs
src/Control/Monad-old/Graph/: Class.1.hs  Class.2.hs  Class.hs  Eff.hs  IxApSeq.hs  Opt.hs  Playground.hs  Prelude.hs
src/Control/Monad-old/Graph/Internal/: Eff.hs
src/Control/Monad/Graph/: ApSeq.hs  Class.hs  Eff.hs  IxApSeq.hs  Playground.hs  Prelude.hs
src/Control/Monad/Graph/Class/: Indexed.hs
src/Data/Iota/: Eff1.hs  FTCQueue1.hs  OpenUnion51.hs
src/Data/Iota/Strict/: Eff1.hs  FTCQueue1.hs  OpenUnion51.hs
src/Data/Iota/Tagged/: Eff1.hs  FTCQueue1.hs  OpenUnion51.hs
src/Data/Iota/Unified/: Eff1.hs  Eff2.hs  FTCQueue1.hs  Indexed.hs  Indexed2.hs  Indexed3.hs  Indexed4.hs  Indexed5.hs  Indexed6.hs  OpenUnion51.hs  TQueue.hs  Test.hs
src/Data/Type/: BiMap.hs  Map.hs  Set.hs
src/Data/Type/Test/: BiMap.hs
src/Eff/Internal/: Eff1.hs  FTCQueue1.hs  OpenUnion51.hs
