name:                eff-experiments
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/eff-experiments#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
                       Control.Eff.Internal.Eff
                     , Control.Eff.Internal.EffectBuilder
                     , Control.Eff.Internal.FTCQueue
                     , Control.Eff.Internal.Types
                     , Control.Eff.Internal.Playground
                    --  , Control.Monad.Graph.Class
                    --  , Control.Monad.Graph.Eff
                    --  , Control.Monad.Graph.Playground
                    --  , Data.Iota.Eff1
                    --  , Data.Iota.FTCQueue1
                    --  , Data.Iota.OpenUnion51
                    --  , Data.Iota.Strict.Eff1
                    --  , Data.Iota.Strict.FTCQueue1
                    --  , Data.Iota.Strict.OpenUnion51
                    --  , Data.Iota.Unified.Eff1
                    --  , Data.Iota.Unified.Eff2
                    --  , Data.Iota.Unified.FTCQueue1
                    --  , Data.Iota.Unified.OpenUnion51
                    --  , Data.Iota.Tagged.Eff1
                    --  , Data.Iota.Tagged.FTCQueue1
                    --  , Data.Iota.Tagged.OpenUnion51
                    --  , Util
  build-depends:       base >= 4.7
                    --  , eff  >= 0.1.0.0
                    --  , mono-traversable
                    --  , mono-traversable-instances
                    --  , indexed
                    --  , text
                     , ghc-prim
                    --  , typelits-witnesses
                    --  , indexed-do-notation
                    --  , template-haskell
                    --  , haskell-src-meta
                    --  , singletons == 2.3
                     , lens
                     , graphted
                    --  , type-level-sets
                    --  , cxmonad
                    --  , deepseq
                    --  , hvect
                    --  , constraints
  default-language:    Haskell2010

-- executable eff
--   hs-source-dirs:      src-exe
--   main-is:             Main.hs
--   build-depends:       base >= 4.7
--                      , eff-experiments
--   ghc-options:         -threaded -O2
--                        -fdicts-strict
--                        -funbox-strict-fields
--                        -fllvm
--                        -optlo-O3
--                        -optlo-dce -optlo-globaldce -optlo-globalopt -optlo-constmerge
--                        -ddump-llvm
--                        -ddump-to-file 
--                        -ddump-simpl
--                        -dsuppress-idinfo
--                        -dsuppress-unfoldings
--                        -dsuppress-type-signatures
--                        -dsuppress-type-applications
--                        -dsuppress-coercions 
--                        -dsuppress-module-prefixes
--                       --  -optlo-disable-inlining -optlo-basicaa -optlo-basiccg
--                       --  -optlo-count-aa -optlo-domfrontier -optlo-domtree
--                       --  -optlo-globalsmodref-aa -optlo-memdep -optlo-no-aa
--                       --  -optlo-postdomtree -optlo-codegenprepare
--                       --  -optlo-functionattrs -optlo-constmerge
--                       --  -optlo-constprop -optlo-die -optlo-dse -optlo-globaldce
--                       --  -optlo-globalopt -optlo-indvars -optlo-inline -optlo-ipconstprop
--                       --  -optlo-ipsccp -optlo-lcssa -optlo-loop-deletion
--                       --  -optlo-loop-unroll -optlo-loop-unswitch -optlo-loop-simplify
--                       --  -optlo-mem2reg -optlo-memcpyopt -optlo-scalarrepl
--                       --  -optlo-tailcallelim 
--   default-language:    Haskell2010

-- test-suite eff-experiments-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , eff-experiments
--   ghc-options:         -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- benchmark eff-experiments-benchmark
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Benchmarks.hs
--   other-modules:       Strict.Iota
--                        Tagged
--                        Iota
--                        Indexed
--   build-depends:       base
--                      , eff-experiments
--                      , indexed
--                     --  , indexed-do-notation
--                      , eff
--                      , criterion
--                      , mtl
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/eff-experiments
