name:                cxmonad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aaronfriel/cxmonad#readme
license:             BSD3
license-file:        LICENSE
author:              Aaron Friel
maintainer:          mayreply@aaronfriel.com
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Functor.Cx
                     , Control.Monad.Cx
                     , Data.Functor.Cx.Rebound
                     , Control.Monad.Cx.Rebound
  build-depends:       base >= 4.7 && < 5
                     , singletons
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aaronfriel/cxmonad
